# FastICLE

./: .env.example  .gitignore  LICENSE.md  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: python-publish.yml
research/hellaswag/data/: .gitkeep
src/: icle.py  task.py
src/assembler/: core.py
src/campus/: core.py  prompts.py
src/campus/models/: agent_config.py  expert_config.py
src/caster/: caster.py  core.py  prompts.py
src/caster/models/: caster_output.py
src/dispatcher/: core.py  dispatcher.py  prompts.py
src/dispatcher/models/: dispatcher_task.py  dispatcher_task_list.py
src/fasticle/campus/: core.py
src/fasticle/caster/: core.py
src/icle/: __init__.py  log_setup.py
src/icle/assembler/: core.py  prompts.py
src/icle/campus/: core.py  prompts.py
src/icle/campus/models/: expert_config.py  training_task_list.py
src/icle/caster/: core.py  prompts.py
src/icle/dispatcher/: core.py  prompts.py
src/icle/models/: step_identifier.py  tasks.py
src/icle/runtime/: core.py  prompts.py
src/models/: tasks.py
src/runtime/: core.py
tests/: .gitkeep  conftest.py
tests/assembler/: test_assembler.py
tests/campus/: campus_run_test.py  test_campus.py  test_expert_config.py  test_training_task_list.py
tests/caster/: caster_instance_test.py  caster_run_test.py  test_caster_instance.py  test_caster_prompts.py
tests/data/dummy_experts/: nature_writer.yaml
tests/dispatcher/: dispatcher_instance_test.py  dispatcher_run_test.py  test_dispatcher_prompts.py
tests/icle/: icle_run_test.py  test_used_experts.py  test_verbose_logging.py
tests/meta/: global_data_test.py
tests/models/: test_step_identifier.py  test_tasks.py
tests/runtime/: runtime_parallel_test.py  test_runtime.py
