[project]
name = "icle"
version = "0.1.0"
description = "TODO: Package description"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=2.6.9",
    "fastapi>=0.136.3",
    "fasticrl",
    "loguru>=0.7.3",
    "openai>=2.38.0",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
]

[tool.uv.sources]
fasticrl = { path = "../FastICRL" }
