[project]
name = "icle"
version = "1.0.2pre"
description = "TODO: Package description // refer to future paper"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=2.6.9",
    "fastapi>=0.136.3",
    "fasticrl",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
test = [
    "openai>=2.38.0",
]
